# agent-mail-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  PROJECT_UNDERSTANDING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  npm-publish.yml  npm-smoke.yml  release.yml  winget-init.yml  winget-publish.yml
docs/: landscape.md
npm/: .npmignore  README.md  package.json
npm/scripts/: postinstall.js
specs/: 001-agent-mail-cli.md  002-packaging.md  003-npm-distribution.md
src/: mail.py
src/agent_mail/: __init__.py  __main__.py  cli.py
tests/: conftest.py  test_cli_behavior.py  test_parity.py
